--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,8 @@ a {
   color: inherit;
 }
 
-.top-line {
-  background-color: #e7e9fc;
+h2 {
+  text-align: center;
 }
 
 .logo {
@@ -29,7 +29,7 @@ a {
   text-decoration: none;
   color: #4d5ae5;
   font-weight: 700;
-  font-size: 21px;
+  font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
 }
@@ -38,12 +38,40 @@ a {
   color: #2e2f42;
 }
 
-.container {
-  background-color: #2e2f42;
-  height: 600px;
+.link {
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
-.header-1 {
+.link:hover {
+  color: #404bbf;
+}
+
+.link:focus {
+  color: #404bbf;
+}
+
+.info-contacts {
+  font-style: normal;
+}
+
+.mail {
+  letter-spacing: 0.02em;
+}
+
+.mail:hover {
+  color: #404bbf;
+}
+
+.mail:focus {
+  color: #404bbf;
+}
+.container {
+  background-color: #2e2f42;
+}
+
+.main-header {
   color: #ffffff;
   font-weight: 700;
   font-size: 56px;
@@ -53,6 +81,7 @@ a {
 }
 
 .button {
+  font-family: "Roboto", sans-serif;
   background-color: #4d5ae5;
   color: #ffffffff;
   font-size: 16px;
@@ -64,8 +93,40 @@ a {
   cursor: pointer;
 }
 
-h2 {
-  text-align: center;
+.button:hover {
+  background-color: #404bbf;
+}
+
+.button:focus {
+  background-color: #404bbf;
+}
+
+.third-level-title {
+  color: #2e2f42;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.text-title {
+  letter-spacing: 0.02em;
+}
+
+.team-section {
+  background-color: #f4f4fd;
+}
+
+.team-title {
+  text-transform: capitalize;
+  color: #2e2f42;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+}
+
+.team-item {
+  background-color: #ffffff;
 }
 
 .footer {
